--- a/Masterarbeit 4/Tex/chapter7.tex
+++ b/Masterarbeit 4/Tex/chapter7.tex
@@ -38,7 +38,38 @@ Werden bei den Meinungsfragen bei den großen Modellen die von BPMN oder von Con
 
 \subsubsection{Teilnehmer}
 
-Es wurden Studenten und Doktoranden aus dem Bereich Informatik/Medieninformatik befragt. Diese hatten unterschiedliches Hintergrundwissen zum Thema Prozessmodellierung. Wie Abbildung entnommen werden kann. Es fanden vorher keine Trainings mit den Teilnehmern in BPMN oder ConDec statt. Die Versuchsobjekte wurden bewusst nach unterschiedlichem Hintergrundwissen zum Thema Prozessmodellierung ausgewählt, um zu prüfen, inwiefern sich die Ergebnisse bei den Verständnisfragen zwischen Personen mit viel und wenig Hintergrundwissen zum Thema Prozessmodellierung unterscheiden.\newline
+Es wurden 32 Studenten und Doktoranden aus dem Bereich Informatik/Medieninformatik befragt. 12 Teilnehmer waren weiblich und 20 männlich (Abbildung \ref{fig:Geschlechterverteilung}). Die allgemeinen demographischen Daten der Probanden können Abbildung \ref{fig:TabelleAllgemeineDaten} entnommen werden. Diese hatten unterschiedliches Hintergrundwissen zum Thema Prozessmodellierung. Wie Abbildung \ref{fig:VerteilungImperativDeklarative} entnommen werden kann, hatten sieben Studienteilnehmer weder in imperativer noch in deklarativer Modellierung Erfahrung. 18 Probanden hatten nur in imperativer Modellierung Erfahrung, jedoch nicht in deklarativer und sieben weitere Teilnehmer hatten in beiden Modellierungssprachen Erfahrung. Die Versuchsobjekte wurden bewusst nach unterschiedlichem Hintergrundwissen zum Thema Prozessmodellierung ausgewählt, um zu prüfen, inwiefern sich die Ergebnisse bei den Verständnisfragen zwischen Personen mit viel und wenig Hintergrundwissen zum Thema Prozessmodellierung unterscheiden.\newline
+
+\begin{figure}[htp]
+\begin{center}
+  \includegraphics{Geschlechterverteilung} %pdf, jpg, png...
+  \caption{Geschlechterverteilung}
+  \label{fig:Geschlechterverteilung}
+\end{center}
+\end{figure}
+
+\begin{figure}[htp]
+\begin{center}
+  \includegraphics{VerteilungImperativDeklarative} %pdf, jpg, png...
+  \caption{Verteilung Erfahrung imperative und deklarative Modellierung}
+  \label{fig:VerteilungImperativDeklarative}
+\end{center}
+\end{figure}
+
+\begin{figure}[htp]
+\begin{center}
+  \includegraphics[width=\textwidth]{TabelleAllgemeineDaten} %pdf, jpg, png...
+  \caption{Allgemeine demographische Daten}
+  \label{fig:TabelleAllgemeineDaten}
+\end{center}
+\end{figure}
+
+
+
+
+
+
+
 
 
 \subsubsection{Design der Studie}
